--- a/insta-connect-ui/insta-connect-app/src/app/navigation/header/header.component.html
+++ b/insta-connect-ui/insta-connect-app/src/app/navigation/header/header.component.html
@@ -1,3 +1,6 @@
-<p>
-  header works!
-</p>
+<mat-toolbar color="primary">
+  <mat-icon class="sidemenu-btn"><i class="material-icons md-24 md-light md-inactive">view_headline</i></mat-icon>
+  <span matLabel class="label">{{title}}</span>
+  <span class="fill-space"></span>
+  <mat-icon><i class="material-icons md-24 md-light md-inactive">more_vert</i></mat-icon>
+</mat-toolbar>
