--- a/insta-connect-ui/insta-connect-app/src/app/navigation/header/header.component.html
+++ b/insta-connect-ui/insta-connect-app/src/app/navigation/header/header.component.html
@@ -1,6 +1,30 @@
-<mat-toolbar color="primary">
-  <mat-icon class="sidemenu-btn"><i class="material-icons md-24 md-light md-inactive">view_headline</i></mat-icon>
-  <span matLabel class="label">{{title}}</span>
-  <span class="fill-space"></span>
-  <mat-icon><i class="material-icons md-24 md-light md-inactive">more_vert</i></mat-icon>
-</mat-toolbar>
+<mdc-app-bar [fixed]="true" [mdc-elevation]="8">
+  <mdc-app-bar-row>
+    <mdc-app-bar-section [align]="'start'">
+      <a mdcIconButton class="material-icons md-light" (change)="(drawer.isOpen() ? drawer.close() : drawer.open())">menu</a>
+      <mdc-app-bar-title class="title">
+        {{title}}
+      </mdc-app-bar-title>
+    </mdc-app-bar-section>
+    <mdc-app-bar-section [align]="'end'">
+      <a mdcIconButton class="material-icons md-light" aria-label="Download" alt="Download">file_download</a>
+      <a mdcIconButton class="material-icons md-light" aria-label="Print this page" alt="Print this page">print</a>
+      <a mdcIconButton class="material-icons md-light" aria-label="Bookmark this page" alt="Bookmark this page">bookmark</a>
+    </mdc-app-bar-section>
+  </mdc-app-bar-row>
+</mdc-app-bar>
+
+<mdc-drawer [drawer]="'temporary'" [closeOnClick]="false" [fixedAdjustElement]="routerOutlet" #drawer>
+  <mdc-drawer-spacer [mdc-elevation]="8">
+    <mdc-app-bar-section [align]="'start'">
+      <a mdcIconButton class="material-icons md-dark" (change)="(drawer.isOpen() ? drawer.close() : drawer.open())">menu</a>
+      <mdc-app-bar-title class="alt-title">
+        {{title}}
+      </mdc-app-bar-title>
+    </mdc-app-bar-section>
+  </mdc-drawer-spacer>
+  <mdc-drawer-header>
+    <mdc-drawer-header-content class="title"></mdc-drawer-header-content>
+  </mdc-drawer-header>
+  <mdc-drawer-content></mdc-drawer-content>
+</mdc-drawer>
