added searchbar and extra menu

--- a/insta-connect-ui/insta-connect-app/src/app/app.component.html
+++ b/insta-connect-ui/insta-connect-app/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header [title]="title"></app-header>
-<div #routerOutlet>
+<div class="router-outlet">
   <router-outlet></router-outlet>
 </div>
