--- a/insta-connect-ui/insta-connect-app/src/app/navigation/header/header.component.scss
+++ b/insta-connect-ui/insta-connect-app/src/app/navigation/header/header.component.scss
@@ -15,3 +15,19 @@ mdc-app-bar, mdc-drawer-spacer {
   font-size: 20px;
   cursor: pointer;
 }
+
+mdc-menu {
+  margin-top: 5px;
+}
+
+.search-bar {
+  position: relative;
+  top: 50px;
+}
+
+mdc-text-field {
+  padding-left: 5px;
+  padding-right: 5px;
+  width: 100%;
+  margin-right: 5px;
+}
