--- a/insta-connect-ui/insta-connect-app/src/app/navigation/header/header.component.scss
+++ b/insta-connect-ui/insta-connect-app/src/app/navigation/header/header.component.scss
@@ -1,4 +1,4 @@
-mdc-app-bar, mdc-drawer-spacer {
+mdc-app-bar {
   margin-left: -10px;
 }
 
@@ -22,12 +22,12 @@ mdc-menu {
 
 .search-bar {
   position: relative;
-  top: 50px;
+  top: 40px;
+  z-index: 1;
 }
 
 mdc-text-field {
   padding-left: 5px;
   padding-right: 5px;
   width: 100%;
-  margin-right: 5px;
 }
