--- a/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.scss
+++ b/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.scss
@@ -1,15 +1,62 @@
 .container {
   background-image: url("/assets/bg3.jpg");
+  background-position: center;
   background-repeat: no-repeat;
-  width: 100%;
-  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
   position: fixed;
   top: 0;
+  bottom: 0;
   left: 0;
+  right: 0;
+  overflow: auto;
 }
 
 .center {
+  padding: 10px;
+  max-width: 400px;
   position: relative;
-  top: 40%;
-  left: 35%;
+  top: 20%;
+  margin: auto;
+}
+
+.text-box {
+  width: 100%;
+}
+
+.form-btn {
+  background: unset;
+}
+
+.link {
+  text-decoration: unset;
+}
+
+.profile {
+  pointer-events: none;
+  width: 150px;
+  height: 150px;
+  position: relative;
+  left: 30%;
+  margin: auto;
+}
+
+.google {
+  padding: 2px auto;
+  background-color: #ffffff;
+}
+
+@media(max-width: 320px) {
+  .profile {
+    pointer-events: none;
+    width: 150px;
+    height: 150px;
+    position: relative;
+    left: 25%;
+    margin: auto;
+  }
+
+  .small-font {
+    font-size: 14px;
+  }
 }
