changes in signin ui

--- a/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.html
+++ b/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.html
@@ -29,10 +29,10 @@
         </mdc-toolbar-row>
       </mdc-toolbar>
     </form>
-    <mdc-toolbar class="form-btn small-font">
+    <mdc-toolbar class="form-btn">
       <mdc-toolbar-row>
         <mdc-toolbar-section>
-          Don't have an account?&nbsp;<a class="link" routerLink="/signup">Click here</a>&nbsp; to register.
+          Don't have an account? Signup&nbsp;<a class="link" routerLink="/signup">here</a>.
         </mdc-toolbar-section>
       </mdc-toolbar-row>
     </mdc-toolbar>
