--- a/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.html
+++ b/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.html
@@ -32,7 +32,7 @@
     <mdc-toolbar class="form-btn">
       <mdc-toolbar-row>
         <mdc-toolbar-section>
-          Don't have an account? Signup&nbsp;<a class="link" routerLink="/signup">here</a>.
+          Don't have an account? Signup&nbsp;<a class="link" routerLink="/signup">here.</a>
         </mdc-toolbar-section>
       </mdc-toolbar-row>
     </mdc-toolbar>
