added signup page ui

--- a/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.html
+++ b/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.html
@@ -19,7 +19,7 @@
             <button mdc-button [primary]="true" [raised]="true" (click)="signin()">Sign in</button>
           </mdc-toolbar-section>
           <mdc-toolbar-section>
-            <span class="small-font">OR Signin with</span>
+            <span class="small-font top-center">OR Signin with</span>
           </mdc-toolbar-section>
           <mdc-toolbar-section [alignEnd]="true">
             <button mdc-button  class="google" [primary]="true" [raised]="true" (click)="googleSignin()">
