--- a/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.scss
+++ b/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.scss
@@ -1,22 +1,8 @@
-.container {
-  background-image: url("/assets/bg3.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-repeat: no-repeat;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  overflow: auto;
-}
-
 .center {
   padding: 10px;
   max-width: 400px;
   position: relative;
-  top: 20%;
+  top: 15%;
   margin: auto;
 }
 
@@ -46,6 +32,10 @@
   background-color: #ffffff;
 }
 
+.top-center {
+  margin-top: 10px;
+}
+
 @media(max-width: 320px) {
   .profile {
     pointer-events: none;
@@ -57,6 +47,7 @@
   }
 
   .small-font {
+    margin-top: 10px;
     font-size: 14px;
   }
 }
