--- a/insta-connect-ui/insta-connect-app/src/styles.scss
+++ b/insta-connect-ui/insta-connect-app/src/styles.scss
@@ -1,4 +1,5 @@
 /* Rules for sizing the icon. */
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 @import "~material-design-icons/iconfont/material-icons.css";
 .material-icons.md-18 {
   font-size: 18px;
