--- a/insta-connect-ui/insta-connect-app/src/app/autherization/signup/signup.component.html
+++ b/insta-connect-ui/insta-connect-app/src/app/autherization/signup/signup.component.html
@@ -1,17 +1,17 @@
 <div class="container">
   <div class="center">
     <button mdc-fab class="profile indigo600Fab">
-      <mdc-icon class="material-icons md-light btn-add">add</mdc-icon>
+      <mdc-icon class="material-icons md-light btn-add">camera_alt</mdc-icon>
     </button>
     <form [formGroup]="form">
       <mdc-text-field type="email" class="text-box" [outline]="true" formControlName="email" [label]="'Email ID'"></mdc-text-field><br/>
       <mdc-text-field type="text" class="text-box" [outline]="true" formControlName="name" [label]="'Name'"></mdc-text-field><br/>
       <mdc-text-field type="text" class="text-box" [outline]="true" formControlName="mobile" [label]="'Mobile'"></mdc-text-field><br/>
       <mdc-text-field appShowHidePassword class="text-box" [outline]="true" formControlName="password" [label]="'Password'">
-        <mdc-icon trailing clickable (click)="toggleShowPassword()">visibility</mdc-icon>
+        <mdc-icon trailing clickable>visibility</mdc-icon>
       </mdc-text-field>
-      <mdc-text-field appShowHideCnfPassword class="text-box" [outline]="true" formControlName="cnfpassword" [label]="'Confirm Password'">
-        <mdc-icon trailing clickable (click)="toggleShowCnfPassword()">visibility</mdc-icon>
+      <mdc-text-field appShowHidePassword class="text-box" [outline]="true" formControlName="cnfpassword" [label]="'Confirm Password'">
+        <mdc-icon trailing clickable>visibility</mdc-icon>
       </mdc-text-field>
       <mdc-toolbar class="form-btn">
         <mdc-toolbar-row>
