moved show/hide password directive into app-common module

--- a/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.html
+++ b/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.html
@@ -8,7 +8,7 @@
         <mdc-icon trailing>account_box</mdc-icon>
       </mdc-text-field><br/>
       <mdc-text-field appShowHidePassword class="text-box" [outline]="true" formControlName="password" [label]="'Password'">
-        <mdc-icon trailing clickable (click)="toggleShowPassword()">visibility</mdc-icon>
+        <mdc-icon trailing clickable>visibility</mdc-icon>
       </mdc-text-field><br/>
       <mdc-toolbar class="form-btn">
         <mdc-toolbar-row>
