--- a/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.scss
+++ b/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.scss
@@ -10,7 +10,7 @@
   width: 100%;
 }
 
-.form-btn {
+.clear-bg {
   background: unset;
 }
 
@@ -30,6 +30,10 @@
 .google {
   padding: auto;
   background-color: #ffffff;
+}
+
+.error-text {
+  color: #ff0000 !important;
 }
 
 .top-center {
