added validation in signup

--- a/insta-connect-ui/insta-connect-app/src/app/autherization/signup/signup.component.html
+++ b/insta-connect-ui/insta-connect-app/src/app/autherization/signup/signup.component.html
@@ -4,25 +4,32 @@
       <mdc-icon class="material-icons md-light btn-add">camera_alt</mdc-icon>
     </button>
     <form [formGroup]="form">
-      <mdc-text-field type="email" class="text-box" formControlName="email" [label]="'Email ID'" [helperText]="emailHelperText"></mdc-text-field>
+      <mdc-text-field #email type="email" class="text-box" formControlName="email" [label]="'Email ID'" [helperText]="emailHelperText">
+        <mdc-icon trailing>email</mdc-icon>
+      </mdc-text-field>
       <p mdcTextFieldHelperText class="error-text" #emailHelperText="mdcHelperText" [persistent]="true" [validation]="true"></p>
-      <mdc-text-field type="text" class="text-box" formControlName="name" [label]="'Name'" [helperText]="nameHelperText"></mdc-text-field>
+      <mdc-text-field #name type="text" class="text-box" formControlName="name" [label]="'Name'" [helperText]="nameHelperText"></mdc-text-field>
       <p mdcTextFieldHelperText class="error-text" #nameHelperText="mdcHelperText" [persistent]="true" [validation]="true"></p>
       <mat-form-field class="text-box align">
-        <mat-select #selectCountry placeholder="Country" formControlName="country">
-          <mat-option *ngFor="let country of isdCodeList" [value]="code">
-            <span><img src="/assets/blank.gif" [class]="'img-align flag flag-' + country.flag" [alt]="country.name" />{{ country.name }}</span>
+        <mat-select placeholder="Country" formControlName="country" (selectionChange)="setIsdCode()">
+          <mat-option *ngFor="let country of isdCodeList" [value]="country">
+            <span class="txt-align"><img src="/assets/blank.gif" [class]="'img-align flag flag-' + country.code.toLowerCase()" [alt]="country.name">{{ country.name }}</span>
           </mat-option>
         </mat-select>
-        <mat-hint align="start" class="error-text"></mat-hint>
-      </mat-form-field>
-      <mdc-text-field type="tel" class="text-box" formControlName="mobile" [label]="'Mobile'" [helperText]="mobileHelperText"></mdc-text-field>
-      <p mdcTextFieldHelperText class="error-text" #mobileHelperText="mdcHelperText" [persistent]="true" [validation]="true"></p>
-      <mdc-text-field appShowHidePassword class="text-box" formControlName="password" [label]="'Password'" [helperText]="passwordHelperText">
+        <mat-error *ngIf="form.controls.country.errors">{{error.country}}</mat-error>
+      </mat-form-field><br/>
+      <mat-form-field class="text-box align-tel">
+        <mat-label>Mobile</mat-label>
+        <span matPrefix #isdCode></span>
+        <input matInput type="tel" formControlName="mobile">
+        <mdc-icon matSuffix class="material-icons md-dark">phone</mdc-icon>
+        <mat-error *ngIf="form.controls.mobile.errors">{{error.mobile}}</mat-error>
+      </mat-form-field><br/>
+      <mdc-text-field #password appShowHidePassword class="text-box" formControlName="password" [label]="'Password'" [helperText]="passwordHelperText">
         <mdc-icon trailing clickable>visibility</mdc-icon>
       </mdc-text-field>
       <p mdcTextFieldHelperText class="error-text" #passwordHelperText="mdcHelperText" [persistent]="true" [validation]="true"></p>
-      <mdc-text-field appShowHidePassword class="text-box" formControlName="cnfpassword" [label]="'Confirm Password'" [helperText]="cnfPasswordHelperText">
+      <mdc-text-field #cnfpassword appShowHidePassword class="text-box" formControlName="cnfpassword" [label]="'Confirm Password'" [helperText]="cnfPasswordHelperText">
         <mdc-icon trailing clickable>visibility</mdc-icon>
       </mdc-text-field>
       <p mdcTextFieldHelperText class="error-text" #cnfPasswordHelperText="mdcHelperText" [persistent]="true" [validation]="true"></p>
