--- a/insta-connect-ui/insta-connect-app/src/assets/flags.css
+++ b/insta-connect-ui/insta-connect-app/src/assets/flags.css
@@ -6,7 +6,7 @@
     display: inline-block;
     width: 24px;
     height: 24px;
-    background: url('/assets/flags/flags.png') no-repeat;
+    background: url('/assets/flags.png') no-repeat;
 }
 
 
