--- a/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.scss
+++ b/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.scss
@@ -10,6 +10,11 @@
   width: 100%;
 }
 
+.text-box > mdc-icon {
+  margin-right: -15px;
+  margin-bottom: -10px;
+}
+
 .clear-bg {
   background: unset;
 }
