changes to validate signup page and ui changes

--- a/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.scss
+++ b/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.scss
@@ -32,9 +32,14 @@
   margin: auto;
 }
 
+.profile > mdc-icon {
+  font-size: 165px;
+}
+
 .google {
   padding: auto;
   background-color: #ffffff;
+  width: 120px;
 }
 
 .error-text {
