--- a/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.html
+++ b/insta-connect-ui/insta-connect-app/src/app/autherization/signin/signin.component.html
@@ -1,28 +1,27 @@
 <div class="container">
   <div class="center">
-    <button mdc-fab class="profile">
-      <img src="/assets/blank-profile-picture.jpg" alt="Profile" style="height: 150px; width: 150px;" />
+    <button mdc-fab class="profile indigo600Fab">
+      <mdc-icon class="material-icons md-light">account_circle</mdc-icon>
     </button>
     <form [formGroup]="form">
       <mdc-text-field #email class="text-box" type="email" formControlName="email" [label]="'Email ID'" [helperText]="emailHelperText">
-        <mdc-icon trailing>account_box</mdc-icon>
+        <mdc-icon trailing class="material-icons md-dark md-24">email</mdc-icon>
       </mdc-text-field>
       <p mdcTextFieldHelperText class="error-text" #emailHelperText="mdcHelperText" [persistent]="true" [validation]="true"></p>
       <mdc-text-field #password appShowHidePassword class="text-box" formControlName="password" [label]="'Password'" [helperText]="passwordHelperText">
-        <mdc-icon trailing clickable>visibility</mdc-icon>
+        <mdc-icon trailing clickable class="material-icons md-dark md-24">visibility</mdc-icon>
       </mdc-text-field>
       <p mdcTextFieldHelperText class="error-text" #passwordHelperText="mdcHelperText" [persistent]="true" [validation]="true"></p>
       <mdc-toolbar class="clear-bg">
         <mdc-toolbar-row>
           <mdc-toolbar-section [alignStart]="true">
-            <button mdc-button [primary]="true" [raised]="true" (click)="signin()">Sign in</button>
+            <button mdc-button [primary]="true" [raised]="true" (click)="signin()">
+              <mdc-icon matSuffix class="material-icons md-light md-24">lock_open</mdc-icon>&nbsp;Sign in
+            </button>
           </mdc-toolbar-section>
           <mdc-toolbar-section>
-            <span class="small-font top-center">OR Signin with</span>
-          </mdc-toolbar-section>
-          <mdc-toolbar-section [alignEnd]="true">
-            <button mdc-button  class="google" [primary]="true" [raised]="true" (click)="googleSignin()">
-              <img src="/assets/google_logo.png" alt="Google" style="height: 32px; width: 95px;" />
+            <button mdc-button class="google" [secondary]="true" [raised]="true" (click)="googleSignin()">
+              <img src="/assets/google_logo.png" alt="Google" style="height: 32px; width: 32px;" />
             </button>
           </mdc-toolbar-section>
         </mdc-toolbar-row>
@@ -31,7 +30,7 @@
     <mdc-toolbar class="clear-bg">
       <mdc-toolbar-row>
         <mdc-toolbar-section>
-          Don't have an account? Signup&nbsp;<a class="link" routerLink="/signup">here.</a>
+          Don't have an account?&nbsp;<a class="link" routerLink="/signup">Create here.</a>
         </mdc-toolbar-section>
       </mdc-toolbar-row>
     </mdc-toolbar>
