--- a/insta-connect-ui/insta-connect-app/src/app/autherization/signup/signup.component.html
+++ b/insta-connect-ui/insta-connect-app/src/app/autherization/signup/signup.component.html
@@ -1,45 +1,55 @@
 <div class="container">
   <div class="center">
-    <button mdc-fab class="profile indigo600Fab">
-      <mdc-icon class="material-icons md-light btn-add">camera_alt</mdc-icon>
+    <button mdc-fab class="profile-out white500Fab">
+      <button mdc-fab class="profile-in indigo600Fab">
+        <mdc-icon class="material-icons md-light">account_circle</mdc-icon>
+      </button>
+    </button>
+    <button mdc-fab [mini]="true" class="blue200Fab btn-add">
+      <mdc-icon class="material-icons md-light md-24">add_a_photo</mdc-icon>
     </button>
     <form [formGroup]="form">
       <mdc-text-field #email type="email" class="text-box" formControlName="email" [label]="'Email ID'" [helperText]="emailHelperText">
-        <mdc-icon trailing>email</mdc-icon>
+        <mdc-icon trailing class="material-icons md-dark md-24">email</mdc-icon>
       </mdc-text-field>
       <p mdcTextFieldHelperText class="error-text" #emailHelperText="mdcHelperText" [persistent]="true" [validation]="true"></p>
-      <mdc-text-field #name type="text" class="text-box" formControlName="name" [label]="'Name'" [helperText]="nameHelperText"></mdc-text-field>
+      <mdc-text-field #name type="text" class="text-box" formControlName="name" [label]="'Name'" [helperText]="nameHelperText">
+        <mdc-icon trailing class="material-icons md-dark md-24">person</mdc-icon>
+      </mdc-text-field>
       <p mdcTextFieldHelperText class="error-text" #nameHelperText="mdcHelperText" [persistent]="true" [validation]="true"></p>
       <mat-form-field class="text-box align">
-        <mat-select placeholder="Country" formControlName="country" (selectionChange)="setIsdCode()">
+        <mat-select placeholder="Country" formControlName="country">
           <mat-option *ngFor="let country of isdCodeList" [value]="country">
             <span class="txt-align"><img src="/assets/blank.gif" [class]="'img-align flag flag-' + country.code.toLowerCase()" [alt]="country.name">{{ country.name }}</span>
           </mat-option>
         </mat-select>
+        <mdc-icon matSuffix class="material-icons md-dark md-24">place</mdc-icon>
         <mat-error *ngIf="form.controls.country.errors">{{error.country}}</mat-error>
-      </mat-form-field><br/>
-      <mat-form-field class="text-box align-tel">
-        <mat-label>Mobile</mat-label>
-        <span matPrefix #isdCode></span>
-        <input matInput type="tel" formControlName="mobile">
-        <mdc-icon matSuffix class="material-icons md-dark">phone</mdc-icon>
-        <mat-error *ngIf="form.controls.mobile.errors">{{error.mobile}}</mat-error>
-      </mat-form-field><br/>
+      </mat-form-field>
+      <mdc-text-field #mobile class="text-box align-tel" formControlName="mobile" [label]="'Mobile'" [helperText]="mobileHelperText">
+        <mdc-icon trailing class="material-icons md-dark md-24">phone</mdc-icon>
+      </mdc-text-field>
+      <p mdcTextFieldHelperText class="error-text" #mobileHelperText="mdcHelperText" [persistent]="true" [validation]="true"></p>
       <mdc-text-field #password appShowHidePassword class="text-box" formControlName="password" [label]="'Password'" [helperText]="passwordHelperText">
-        <mdc-icon trailing clickable>visibility</mdc-icon>
+        <mdc-icon trailing clickable class="material-icons md-dark md-24">visibility</mdc-icon>
       </mdc-text-field>
       <p mdcTextFieldHelperText class="error-text" #passwordHelperText="mdcHelperText" [persistent]="true" [validation]="true"></p>
       <mdc-text-field #cnfpassword appShowHidePassword class="text-box" formControlName="cnfpassword" [label]="'Confirm Password'" [helperText]="cnfPasswordHelperText">
-        <mdc-icon trailing clickable>visibility</mdc-icon>
+        <mdc-icon trailing clickable class="material-icons md-dark md-24">visibility</mdc-icon>
       </mdc-text-field>
       <p mdcTextFieldHelperText class="error-text" #cnfPasswordHelperText="mdcHelperText" [persistent]="true" [validation]="true"></p>
       <mdc-toolbar class="clear-bg">
         <mdc-toolbar-row>
-          <mdc-toolbar-section [alignStart]="true"></mdc-toolbar-section>
           <mdc-toolbar-section>
-            <button mdc-button [primary]="true" [raised]="true" (click)="signup()">Sign up</button>
+            <button mdc-button [primary]="true" [raised]="true" (click)="signup()">
+              <mdc-icon matSuffix class="material-icons md-light md-24">person_add</mdc-icon>&nbsp;Sign up
+            </button>
           </mdc-toolbar-section>
-          <mdc-toolbar-section [alignEnd]="true"></mdc-toolbar-section>
+          <mdc-toolbar-section>
+            <button mdc-button [secondary]="true" [raised]="true" routerLink="/signin">
+              <mdc-icon matSuffix class="material-icons md-dark md-24">cancel</mdc-icon>&nbsp;Cancel
+            </button>
+          </mdc-toolbar-section>
         </mdc-toolbar-row>
       </mdc-toolbar>
     </form>
