--- a/insta-connect-ui/insta-connect-app/src/app/autherization/signup/signup.component.scss
+++ b/insta-connect-ui/insta-connect-app/src/app/autherization/signup/signup.component.scss
@@ -21,12 +21,6 @@
 
 .align {
   margin-top: 15px;
-  margin-bottom: -15px;
-}
-
-.align-tel {
-  margin-top: 20px;
-  margin-bottom: -10px;
 }
 
 .error-text {
@@ -43,28 +37,46 @@
   padding-bottom: 10px !important;
 }
 
-.profile {
+.profile-out {
+  pointer-events: none;
   width: 150px;
   height: 150px;
   position: relative;
   left: 30%;
   margin: auto;
+  z-index: -1;
+}
+
+.profile-in {
+  pointer-events: none;
+  width: 135px;
+  height: 135px;
+  position: relative;
+  margin: auto;
+}
+
+.profile-in > mdc-icon {
+  font-size: 150px;
 }
 
 .btn-add {
-  font-size: 100px;
-}
-
-.mdc-fab.indigo600Fab {
-  background-color: #2962FF;
+  z-index: 1;
+  position: absolute;
+  margin: auto;
+  left: 75px;
+  right: 0px;
+  top: 0px;
+  bottom: 425px;
 }
 
 @media(max-width: 320px) {
-  .profile {
+  .profile-out {
+    pointer-events: none;
     width: 150px;
     height: 150px;
     position: relative;
     left: 25%;
     margin: auto;
+    z-index: -1;
   }
 }
